Добавлен bootstrap на front

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -4,7 +4,7 @@
   font-family: "Play", sans-serif; }
 
 body {
-  background-color: 0D0E11; }
+  background-color: #0D0E11; }
 
 header .header__logo {
   display: flex;
@@ -18,8 +18,7 @@ header .header__logo {
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    display: inline-block;
-    margin-left: 142px; }
+    display: block; }
 header .header__menu {
   margin-top: 50px;
   display: flex;
@@ -34,59 +33,64 @@ header .header__menu {
     header .header__menu .menu-item_active {
       color: #51CC88; }
 
-.main {
-  padding: 0 84px; }
-  .main__exPhoto {
-    height: 234px;
-    display: flex;
-    align-items: center;
-    padding-left: 70px; }
-    .main__exPhoto .title {
-      color: #FFF;
-      font-size: 36px;
-      font-weight: 500; }
-    .main__exPhoto .exemples {
-      display: flex;
-      justify-content: space-evenly;
-      align-items: center;
-      margin-left: 147px; }
-      .main__exPhoto .exemples__photo {
-        width: 275px;
-        height: 154px;
-        border-radius: 26px;
-        border: 4px solid #51CC88;
-        margin: 0 20px; }
-  .main .workspace {
-    display: flex;
-    justify-content: space-evenly; }
-  .main__add-photo {
-    user-select: none;
-    display: flex;
-    width: 758px;
-    height: 455px;
-    border-radius: 59px;
-    border: 5px solid #52CD89;
-    text-align: center;
-    color: #CDCDCD;
-    font-size: 20px;
-    font-weight: 500;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden; }
-    .main__add-photo:hover {
-      cursor: pointer; }
-    .main__add-photo span {
-      font-size: 96px;
-      color: #51CC88; }
-    .main__add-photo img {
-      min-width: 100%;
-      min-height: 100%; }
-  .main__description {
-    display: block;
-    width: 500px;
-    color: #ADADAD;
-    font-size: 32px;
-    font-style: normal;
+.main__exPhoto {
+  height: 234px;
+  display: flex;
+  align-items: center; }
+  .main__exPhoto .title {
+    color: #FFF;
+    font-size: 36px;
     font-weight: 500; }
+  .main__exPhoto .exemples {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center; }
+    .main__exPhoto .exemples__photo {
+      width: 270px;
+      height: 154px;
+      border-radius: 26px;
+      border: 4px solid #51CC88;
+      margin: 0 20px; }
+.main__add-photo {
+  user-select: none;
+  display: flex;
+  width: 750px;
+  height: 450px;
+  border-radius: 59px;
+  border: 5px solid #52CD89;
+  text-align: center;
+  color: #CDCDCD;
+  font-size: 20px;
+  font-weight: 500;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden; }
+  .main__add-photo:hover {
+    cursor: pointer; }
+  .main__add-photo span {
+    font-size: 96px;
+    color: #51CC88; }
+  .main__add-photo img {
+    min-width: 100%;
+    min-height: 100%; }
+.main__description {
+  display: block;
+  width: 500px;
+  color: #ADADAD;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 500; }
+.main__newPhoto {
+  display: none;
+  margin: 0 auto;
+  margin-top: 20px;
+  color: #51CC88;
+  border-radius: 50px;
+  border: 7px solid #51CC88;
+  background: #171A1D;
+  width: 397px;
+  height: 81px; }
+.main .output {
+  display: none; }
 
 /*# sourceMappingURL=style.css.map */
