--- a/app/static/sass/style.sass
+++ b/app/static/sass/style.sass
@@ -5,7 +5,7 @@
 
 body
     // background: linear-gradient(0deg, rgba(0, 0, 0, 0.44) 0%, rgba(0, 0, 0, 0.44) 100%), url(../img/main.png), lightgray 50% / cover no-repeat
-    background-color: 0D0E11
+    background-color: #0D0E11
 header
     .header__logo
         display: flex
@@ -19,8 +19,7 @@ header
             font-style: normal
             font-weight: 600
             line-height: normal
-            display: inline-block
-            margin-left: 142px
+            display: block
     .header__menu
         margin-top: 50px
         display: flex
@@ -35,12 +34,10 @@ header
             &_active
                 color: #51CC88
 .main
-    padding: 0 84px
     &__exPhoto
         height: 234px
         display: flex
         align-items: center
-        padding-left: 70px
         .title
             color: #FFF
             font-size: 36px
@@ -49,21 +46,17 @@ header
             display: flex
             justify-content: space-evenly
             align-items: center
-            margin-left: 147px
             &__photo
-                width: 275px
+                width: 270px
                 height: 154px
                 border-radius: 26px
                 border: 4px solid #51CC88
                 margin: 0 20px
-    .workspace
-        display: flex
-        justify-content: space-evenly
     &__add-photo
         user-select: none
         display: flex
-        width: 758px
-        height: 455px
+        width: 750px
+        height: 450px
         border-radius: 59px
         border: 5px solid #52CD89
         text-align: center
@@ -88,3 +81,15 @@ header
         font-size: 32px
         font-style: normal
         font-weight: 500
+    &__newPhoto
+        display: none
+        margin: 0 auto
+        margin-top: 20px
+        color: #51CC88
+        border-radius: 50px
+        border: 7px solid #51CC88
+        background: #171A1D
+        width: 397px
+        height: 81px
+    .output
+        display: none
