--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../static/css/bootstrap-grid.css" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -10,44 +11,51 @@
 </head>
 <body>
     <header>
-        <div class="header__logo">
-            <img src="../static/images/Logo.png" alt="Логотип" class="logo">
-            <h1 class="title">РАСПОЗНАВАНИЕ ОБРАЗА ОГНЕСТРЕЛЬНОГО ОРУЖИЯ
+        <div class="header__logo row-cols-12">
+            <img src="../static/images/Logo.png" alt="Логотип" class="logo col">
+            <h1 class="title col-10 offset-md-1">РАСПОЗНАВАНИЕ ОБРАЗА ОГНЕСТРЕЛЬНОГО ОРУЖИЯ
             </h1>
         </div>
-        <ul class="header__menu">
+        <!-- <ul class="header__menu">
             <li class="menu-item menu-item_active">Распознавание по фото</li>
             <li class="menu-item">Возможное ТТХ оружия </li>
             <li class="menu-item">Общая информация</li>
             <li class="menu-item">Методы противодействия</li>
-        </ul>
+        </ul> -->
     </header>
-    <div class="main">
-        <div class="main__exPhoto">
-            <div class="title">Примеры фото:</div>
-            <div class="exemples">
+    <div class="container">
+        <div class="main__exPhoto row">
+            <div class="title col-md">Примеры фото:</div>
+            <div class="exemples col-md-8">
                 <div class="exemples__photo"></div>
                 <div class="exemples__photo"></div>
                 <div class="exemples__photo"></div>
             </div>
         </div>
-        <div class="workspace">
-            <div class="main__add-photo" id="imageUploader"><div><span>+</span><br>
-                Загрузить изображение</div></div>
-            <input type="file" id="fileInput" style="display: none;" accept="image/*">
-            <div class="main__description" id="typed"></div>
-            <div id="typed-strings">
-                <span>Нейросеть определяет наличие огнестрельного оружия у людей на фото</span>
-            </div>
-            <div class="output">
-                <div class="main__stat">
-                    
+        <div class="main container">
+            <div class="row">
+                <div class="col-md-7">
+                    <div class="main__add-photo" id="imageUploader"><div><span>+</span><br>
+                        Загрузить изображение</div></div>
+                    <input type="file" id="fileInput" style="display: none;" accept="image/*">
+                    <button class="main__newPhoto">Новое фото</button>
                 </div>
-                <!-- Здесь будет инфа о найденном оружии -->
+                <div class="col-md-5">
+                    <div class="main__description" id="typed"></div>
+                    <div id="typed-strings">
+                        <span>Нейросеть определяет наличие огнестрельного оружия у людей на фото</span>
+                    </div>
+                    <div class="output">
+                        <!-- Здесь будет инфа о найденном оружии -->
+                    </div>
+                </div> 
             </div>
         </div>
+        
+       
     </div>
     <script src="../static/js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <script>
         let typed = new Typed('#typed', {
