--- a/app/static/sass/style.sass
+++ b/app/static/sass/style.sass
@@ -1,3 +1,4 @@
+@import keyframes
 *
     margin: 0
     padding: 0
@@ -5,11 +6,12 @@
 
 body
     // background: linear-gradient(0deg, rgba(0, 0, 0, 0.44) 0%, rgba(0, 0, 0, 0.44) 100%), url(../img/main.png), lightgray 50% / cover no-repeat
-    background-color: #0D0E11
+    background-color: #0D1117
 header
     .header__logo
         display: flex
         align-items: center
+        overflow: hidden
         .logo
             width: 108px
             height: 127px
@@ -33,7 +35,36 @@ header
             line-height: normal
             &_active
                 color: #51CC88
+    .header__download
+        height: 5px
+        background: #51CC88
+        border-radius: 75px
+        animation: start 4s 
 .main
+    overflow: hidden
+    .btn
+        width: 200px
+        height: 90px
+        border-radius: 27px
+        background: #3FAB6F
+        border: none
+        color: white
+        cursor: pointer
+        font-size: 20px
+        font-style: normal
+        font-weight: 700
+    &__buttons
+        display: none
+        margin-top: 100px
+        justify-content: space-evenly
+        align-items: center
+    &__back
+        display: flex
+        justify-content: space-evenly
+        align-items: center
+        .img_400x200
+            width: 400px
+            height: 200px
     &__exPhoto
         height: 234px
         display: flex
@@ -55,7 +86,7 @@ header
     &__add-photo
         user-select: none
         display: flex
-        width: 750px
+        width: 100%
         height: 450px
         border-radius: 59px
         border: 5px solid #52CD89
@@ -66,8 +97,7 @@ header
         align-items: center
         justify-content: center
         overflow: hidden
-        &:hover
-            cursor: pointer
+        cursor: pointer
         span
             font-size: 96px
             color: #51CC88
@@ -75,17 +105,22 @@ header
             min-width: 100%
             min-height: 100%
     &__description
+        text-align: center
         display: block
         width: 500px
         color: #ADADAD
         font-size: 32px
         font-style: normal
         font-weight: 500
+        width: 100%
     &__newPhoto
         display: none
         margin: 0 auto
-        margin-top: 20px
-        color: #51CC88
+        margin-top: 100px
+        color: #FFF
+        font-size: 20px
+        font-weight: 700
+        line-height: normal
         border-radius: 50px
         border: 7px solid #51CC88
         background: #171A1D
@@ -93,3 +128,19 @@ header
         height: 81px
     .output
         display: none
+        &__person
+            margin-top: 40px
+            display: flex
+            width: 100%
+            justify-content: space-between
+            align-items: center
+            .face
+                width: 152px
+                height: 171px
+                border-radius: 32px
+                border: 7px solid #E03C3C
+            .percent
+                color: #ADADAD
+                font-size: 27px
+                font-weight: 700
+                line-height: normal
