--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -30,9 +30,9 @@
         <div class="main__exPhoto row">
             <div class="title col-md">Примеры фото:</div>
             <div class="exemples col-md-8">
-                <div class="exemples__photo"></div>
-                <div class="exemples__photo"></div>
-                <div class="exemples__photo"></div>
+                <div class="exemples__photo"><img src="../static/images/ex1.png" alt="Exemple1"></div>
+                <div class="exemples__photo"><img src="../static/images/ex2.jpg" alt="Exemple2"></div>
+                <div class="exemples__photo"><img src="../static/images/ex3.jpg" alt="Exemple3"></div>
             </div>
         </div>
         <div class="main container">
