--- a/app/static/sass/style.sass
+++ b/app/static/sass/style.sass
@@ -83,6 +83,9 @@ header
                 border-radius: 26px
                 border: 4px solid #51CC88
                 margin: 0 20px
+                overflow: hidden
+                img
+                    width: 100%
     &__add-photo
         user-select: none
         display: flex
