Фронтенд: реалтзован fetch запрос

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
+
     <title>Case</title>
 </head>
 <body>
@@ -69,8 +70,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <script src="../static/js/wow.min.js"></script>
+    <script src="../static/js/jszip.js"></script>
     <script src="../static/js/script.js"></script>
-    <script src="js/wow.min.js"></script>
     <script>
         new WOW().init();
     </script>
