Front адаптация под разные экраны

--- a/app/static/sass/media.sass
+++ b/app/static/sass/media.sass
@@ -1,7 +1,81 @@
-@media ( max-width: 1400px )
+@media screen and (max-width: 1700px)
+    .main
+        &__add-photo
+            width: 100%
+            min-height: 400px
+        &__exPhoto
+            .exemples
+                &__photo
+                    width: 270px
+                    height: 154px
+        &__description
+            width: 100%
+        .img400x200
+            width: 400px
+            height: 200px
+@media screen and ( max-width: 1400px )
     .main
         &__exPhoto
             .exemples
                 &__photo
-                    
+                    width: 228px
+                    height: 130px
+@media screen and (max-width: 1200px)
+    .main
+        padding-top: 20px
+        &__buttons
+            flex-direction: column
+            height: 250px
+@media screen and (max-width: 992px)
+    .main
+        &__add-photo
+            min-height: 350px
+            margin: 0 auto
+        &__description
+            margin: 0 auto
+            margin-top: 20px
+            width: 500px
+            padding-bottom: 50px
+        &__buttons
+            flex-direction: row
+            height: auto
+            padding-bottom: 50px
+@media screen and (max-width: 768px)
+    .logo
+        margin: 0 auto
+        display: block
+    .main
+        &__exPhoto
+            .exemples
+                &__photo
+                    height: 88px
+        .img_400x200
+            width: 250px 
+            height: 125px  
+@media screen and ( max-width: 576px )
+    .main
+        min-height: 1500px
+        &__exPhoto
+            .exemples
+                &__photo
+                    height: 50px
+    .title
+        margin: 0 auto
+        text-align: center
+    .main
+        &__add-photo
+            width: 350px
+            min-height: 200px
+            &__description
+                margin: 0 auto
+                margin-top: 20px
+                width: 350px
+                padding-bottom: 50px
+
+     
+
+
+
+        
+
     
