--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -38,10 +38,10 @@
         </div>
         .
     </header>
-    <div class="container main">
+    <div class="container">
         <div class="main__exPhoto row">
-            <div class="title col-md">Примеры фото:</div>
-            <div class="exemples col-md-8">
+            <div class="title col-xl">Примеры фото:</div>
+            <div class="exemples col-xl-8">
                 <div class="exemples__photo"><img src="../static/images/ex1.png" alt="Exemple1"></div>
                 <div class="exemples__photo"><img src="../static/images/ex2.jpg" alt="Exemple2"></div>
                 <div class="exemples__photo"><img src="../static/images/ex3.jpg" alt="Exemple3"></div>
@@ -53,19 +53,19 @@
                 <div class="col-md-12">
                     <div class="main__back">
                         <button class="btn" id="backBtn">Выбрать новое изображение</button>
-                        <div class="main__add-photo img_400x200"></div>
+                        <div class="img_400x200"></div>
                     </div>
                     <div id="count"></div>
                     <div id="counter-strings"><span></span></div>
                 </div>
             </div>
             <div class="row startPage animate__animated">
-                <div class="col-md-7">
+                <div class="col-lg-7">
                     <div class="main__add-photo animate__animated" id="imageUploader"><div><span>+</span><br>
                         Загрузить изображение</div></div>
                     <input type="file" id="fileInput" style="display: none;" accept="image/*">
                 </div>
-                <div class="col-md-5">
+                <div class="col-lg-5">
                     <div class="main__description animate__animated" id="typed"></div>
                     <div id="typed-strings">
                         <span>Нейросеть определяет наличие огнестрельного оружия у людей на фото</span>
