--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -15,12 +15,76 @@
   100% {
     width: 300px;
     margin-left: 100%; } }
+@media screen and (max-width: 1700px) {
+  .main__add-photo {
+    width: 100%;
+    min-height: 400px; }
+  .main__exPhoto .exemples__photo {
+    width: 270px;
+    height: 154px; }
+  .main__description {
+    width: 100%; }
+  .main .img400x200 {
+    width: 400px;
+    height: 200px; } }
+@media screen and (max-width: 1400px) {
+  .main__exPhoto .exemples__photo {
+    width: 228px;
+    height: 130px; } }
+@media screen and (max-width: 1200px) {
+  .main {
+    padding-top: 20px; }
+    .main__buttons {
+      flex-direction: column;
+      height: 250px; } }
+@media screen and (max-width: 992px) {
+  .main__add-photo {
+    min-height: 350px;
+    margin: 0 auto; }
+  .main__description {
+    margin: 0 auto;
+    margin-top: 20px;
+    width: 500px;
+    padding-bottom: 50px; }
+  .main__buttons {
+    flex-direction: row;
+    height: auto;
+    padding-bottom: 50px; } }
+@media screen and (max-width: 768px) {
+  .logo {
+    margin: 0 auto;
+    display: block; }
+
+  .main__exPhoto .exemples__photo {
+    height: 88px; }
+  .main .img_400x200 {
+    width: 250px;
+    height: 125px; } }
+@media screen and (max-width: 576px) {
+  .main {
+    min-height: 1500px; }
+    .main__exPhoto .exemples__photo {
+      height: 50px; }
+
+  .title {
+    margin: 0 auto;
+    text-align: center; }
+
+  .main__add-photo {
+    width: 350px;
+    min-height: 200px; }
+    .main__add-photo__description {
+      margin: 0 auto;
+      margin-top: 20px;
+      width: 350px;
+      padding-bottom: 50px; } }
 * {
   margin: 0;
   padding: 0;
   font-family: "Play", sans-serif; }
 
 body {
+  overflow: hidden;
   background: linear-gradient(124deg, rgba(81, 204, 136, 0.11) 20.8%, rgba(205, 32, 167, 0.15) 78.89%), #0D1117; }
 
 header .header__logo {
@@ -59,6 +123,8 @@ header .animation {
 
 .main {
   overflow: hidden; }
+  .main .startPage {
+    width: 100%; }
   .main .btn {
     width: 200px;
     height: 90px;
@@ -72,6 +138,7 @@ header .animation {
     font-weight: 700; }
   .main__buttons {
     display: none;
+    width: 100%;
     margin-top: 100px;
     justify-content: space-evenly;
     align-items: center; }
@@ -82,8 +149,19 @@ header .animation {
     justify-content: space-evenly;
     align-items: center; }
     .main__back .img_400x200 {
-      width: 400px;
-      height: 200px; }
+      user-select: none;
+      display: flex;
+      border-radius: 20px;
+      border: 5px solid #52CD89;
+      text-align: center;
+      color: #CDCDCD;
+      font-size: 20px;
+      font-weight: 500;
+      align-items: center;
+      justify-content: center;
+      overflow: hidden;
+      cursor: pointer;
+      border-color: #CD20A7; }
   .main__exPhoto {
     height: 234px;
     display: flex;
@@ -91,14 +169,13 @@ header .animation {
     .main__exPhoto .title {
       color: #FFF;
       font-size: 36px;
-      font-weight: 500; }
+      font-weight: 500;
+      text-align: center; }
     .main__exPhoto .exemples {
       display: flex;
       justify-content: space-evenly;
       align-items: center; }
       .main__exPhoto .exemples__photo {
-        width: 270px;
-        height: 154px;
         border-radius: 26px;
         border: 4px solid #51CC88;
         margin: 0 20px;
@@ -108,8 +185,7 @@ header .animation {
   .main__add-photo {
     user-select: none;
     display: flex;
-    width: 100%;
-    height: 450px;
+    height: auto;
     border-radius: 59px;
     border: 5px solid #52CD89;
     text-align: center;
@@ -129,12 +205,10 @@ header .animation {
   .main__description {
     text-align: center;
     display: block;
-    width: 500px;
     color: #ADADAD;
     font-size: 32px;
     font-style: normal;
-    font-weight: 500;
-    width: 100%; }
+    font-weight: 500; }
   .main__newPhoto {
     display: none;
     margin: 0 auto;
