--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,9 +5,6 @@
     <link href="../static/css/bootstrap-grid.css" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/animate.min.css">
     <link rel="stylesheet" href="../static/css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
     <link rel=".apple-touch-icon" sizes="180x180" href="../static/images/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../static/images/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../static/images/icons/favicon-16x16.png">
@@ -36,7 +33,6 @@
                 <div class="header__download animation"></div>
             </div>
         </div>
-        .
     </header>
     <div class="container">
         <div class="main__exPhoto row">
@@ -47,7 +43,7 @@
                 <div class="exemples__photo"><img src="../static/images/ex3.jpg" alt="Exemple3"></div>
             </div>
         </div>
-        <div class="main container">
+        <div class="container main">
             
             <div class="row output animate__animated">
                 <div class="col-md-12">
@@ -80,8 +76,8 @@
         </div>
     </div>
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+    <script src="../static/js/bootstrap.bundle.min.js"></script>
+    <script src="../static/js/typed.umd.js"></script>
     <script src="../static/js/wow.min.js"></script>
     <script src="../static/js/jszip.js"></script>
     <script src="../static/js/script.js"></script>
